# Task

./: README.md
Advanced/A1/: parallel-worktree-plan-agent.md  parallel-worktree-plan.md
Advanced/A2/: parallel-worktree-execution-agent.md  parallel-worktree-execution-report.md
Advanced/A4/: modernization-report.md  repo-modernization-agent.md
Advanced/A5/: pr-review-agent.md  pr-review-report.md
Advanced/A6/: performance-optimization-agent.md  performance-optimization-report.md
Basics/B1/: agent.md  repo-structure-map-Blog-App-Backend.md  repo-structure-map.md
Basics/B2/: agent.md  route-api-map.md
Basics/B3/: agent.md  test-discovery-report.md
Basics/B4/: README.md
Basics/B5/: .dockerignore  Dockerfile  README.md
Basics/B5/src/: app.js  (+2 more)
Basics/B6/: Cargo.toml  README.md
Devops/D1/: terraform-plan-agent.md
Devops/D2/: docker-compose-e2e-agent.md
Devops/D3/: ci-pipeline-agent.md
Devops/D4/: kubernetes-manifests-agent.md
Devops/D5/: dev-environment-bootstrap-agent.md
Devops/D6/: observability-bolt-on-agent.md
agents/: README.md
agents/frontend/: package-lock.json
extra/: README.md
extra/frontend/: README.md  package-lock.json  package.json
frontend/: README.md  package-lock.json  package.json
medusa/: .eslintignore  CONTRIBUTING.md  CPU.20260622.033603.64940.0.001.cpuprofile  _tsconfig.base.json  eslint.medusa.cjs  output.txt  package.json
projects/: README.md
projects/Advanced/A3/scorer/: Cargo.toml
projects/Advanced/A3/scorer/src/: lib.rs  main.rs
rabbit/: .gitignore  LICENSE  README.md  package-lock.json  package.json
(+3308 files in other folders)
