[package]
name = "fraud-scorer"
version = "0.1.0"
edition = "2021"
description = "Rust fraud risk scorer for A3 — library + CLI"

[[bin]]
name = "fraud-scorer"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4"
